--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,4 +1,4 @@
-
+@import "tailwindcss";
 * {
   box-sizing: border-box;
   padding: 0;
@@ -16,13 +16,5 @@ a {
   color: inherit;
   text-decoration: none;
 }
-.navbar {
-  display: flex;
-  width: 100%;
-  height: 50px;
-  background-color: #333;
-  color: #fff;
-  align-items: center;
-  padding: 0 5%;
-}
+
 
