--- a/src/components/layouts/Navbar/Nabvar.module.css
+++ b/src/components/layouts/Navbar/Nabvar.module.css
@@ -5,5 +5,16 @@
     background-color: #333;
     color: #fff;
     align-items: center;
-    padding: 0 5%;
+    padding: 2rem 5%;
+    justify-content: space-between;
   }
+.button{
+  margin-left: 20px !important;
+  font-weight: bold;
+  padding: 10px 20px;
+  background-color: #fff;
+  color: #333;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+}
