--- a/src/components/layouts/Navbar/Nabvar.module.css
+++ b/src/components/layouts/Navbar/Nabvar.module.css
@@ -9,7 +9,7 @@
     justify-content: space-between;
   }
 .button{
-  margin-left: 20px !important;
+  margin-left: 20px !important; 
   font-weight: bold;
   padding: 10px 20px;
   background-color: #fff;
@@ -17,4 +17,14 @@
   border: none;
   border-radius: 5px;
   cursor: pointer;
+}
+.profile{
+  display: flex;
+  align-items: center;
+  gap: 10px;
+}
+.avatar{
+  width: 30px;
+  height: 30px;
+  border-radius: 50%;
 }
